k8s/tan-deploy-fiboworker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci-worker-deploy
  labels:
    app: fibonacciworkerdep
spec:
  selector:
    matchLabels:
      app: fibonacciworker
  replicas: 1
  template:
    metadata:
      name: fibonacci-worker-pod
      labels:
        app: fibonacciworker
    spec:
      containers:
        - name: fibonacciworker
          image: tanoyg/fibonacci-worker-service
          ports:
           -  containerPort: 9080
