k8s/tan-deploy-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tan-fib-mysql-d
  labels:
    app: fib-mysql-d
spec:
  selector:
    matchLabels:
      app: fib-mysql
  template:
    metadata:
      labels:
        app: fib-mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: fib-mysql-vol
      volumes:
        - name: fib-mysql-vol
          persistentVolumeClaim:
            claimName: mysql-vol-claim
