k8s/tan-deploy-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tan-fib-redis-d
  labels:
    app: fib-redis-d
spec:
  selector:
    matchLabels:
      app: fib-redis
  replicas: 2
  template:
    metadata:
      labels:
        app: fib-redis
    spec:
      containers:
       -  name: redis
          image: redis
          ports:
           -  containerPort: 6379
