k8s/tan-service-fibo.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-service
spec:
  type: ClusterIP
  ports:
   -  port: 80
      targetPort: 9081
  selector:
    app: fibonacci
