k8s/tan-service-fiboworker.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-worker-service
spec:
  type: ClusterIP
  ports:
   -  name: http
      protocol: TCP
      port: 80
      targetPort: 9080
  selector:
    app: fibonacciworker
