k8s/tan-service-headless-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: tan-fib-redis-service-h
spec:
  ClusterIP: None
  ports:
   -  port: 6379
      targetPort: 6379
  selector:
    app: fib-redis
