k8s/tan-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: tan-fib-mysql-service
spec:
  type: ClusterIP
  ports:
   -  port: 3306
      targetPort: 3306
  selector:
    app: fib-mysql
