k8s/tan-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: tan-fib-redis-service
spec:
  type: ClusterIP
  ports:
   -  port: 6379
      targetPort: 6379
  selector:
    app: fib-redis
